Started Retrieval section in Methodology

--- a/Methodology.tex
+++ b/Methodology.tex
@@ -73,7 +73,7 @@
 \node (mask) [process, below of=resize] {Land/Cloud/\\Cloud Shadow \\Mask};
 \node (AtmCorr) [process, below of=mask] {Atmospheric \\Correction \\(MoB-ELM)};
 \node (rrs) [io, below of=AtmCorr] {$R_{rs}$ \\Image};
-\node (RetProc) [process, below of=rrs] {Retrieval \\Process \\(RMSE \\lsqnonlin)};
+\node (RetProc) [process, below of=rrs] {Retrieval \\Process \\(RMSE/ \\lsqnonlin)};
 \node (CPAmap) [io, below of=RetProc] {CPA \\maps};
 
 \node (CDRImage) [io, left of=L8image, xshift=-1.5cm] {Landsat \\Reflectance \\Product};
@@ -136,16 +136,15 @@
 % } % resizebox end
 \caption{Detailed flowchart of the process. \label{fig:detailflowchart}}
 \end{figure}
-\todo{fix with NRMSE}
 
 This chapter describes the methodology and approach taken to accomplish the specific objectives mentioned in \S\ref{ch:objectives}. As a review, these specific requirements are (\S\ref{sec:objectives}):
 \begin{enumerate}
   \item To develop an over-water atmospheric correction algorithm for Landsat 8 reflective imagery.
   \item To design a water constituent concentration retrieval algorithm that can be applied to a specific study area.
   \item To validate results by comparing with {\it in situ} measurements and products from ocean color satellites.
-\end{enumerate}.
+\end{enumerate}
 
-The processes described in this work were first introduced by \cite{Concha2013IGARSS} and are based on previous work done by \cite{Raqueno:2000}, \cite{Gerace:2012}, \cite{Pahlevan:2012b} and \cite{Gerace:2013}. A flowchart of the general processes involved is shown in \autoref{fig:highlevelflowchart}. The input are the Landsat 8 images and the final products are the maps of CPAs. The complete process can be divided in four different steps: image pre-processing, atmospheric correction, retrieval process, and validation. This chapter will be divided in this four processes. A more detailed flowchart is illustrated in \autoref{fig:detailflowchart} and a more pictorial diagram is shown in \autoref{fig:retrieval}\todo{Should I include this figure?}.
+The processes described in this work were first introduced by \cite{Concha2013IGARSS} and are based on previous work done by \cite{Raqueno:2000}, \cite{Gerace:2012}, \cite{Pahlevan:2012b} and \cite{Gerace:2013}. A flowchart of the general processes involved is shown in \autoref{fig:highlevelflowchart}. The input are the Landsat 8 images and the final products are the maps of CPAs. The complete process can be divided in four different steps: image pre-processing, atmospheric correction, retrieval process, and validation. This chapter will be divided in this four processes. A more detailed flowchart is illustrated in \autoref{fig:detailflowchart}\todo{fix width NRMSE}~ and a more pictorial diagram is shown in \autoref{fig:retrieval}\todo{Should I include this figure?}\todo{change RMSE for RMSE/lsqnonlin}.
 
 In short, the whole process works as follows. First, the \gls{dn} image from the satellite is radiometric calibrated, resized, and masked for cloud and land. Then, the radiance image is atmospherically corrected and transformed to $R_{rs}$ spectra, as shown in \autoref{fig:detailflowchart}. At this point the $R_{rs}$ spectra of water pixels in the scene with unknown CPAs concentrations are compared with a LUT of $R_{rs}$ spectra with known CPAs concentrations. This comparison is made by using a spectrum-matching technique (\cite{Raqueno:2000,Mobley:2005}) that uses the \gls{rmse} and a non-linear optimization algorithm to find the closest match in the LUT. The end products are maps of CPA concentrations (see \autoref{fig:retrieval}). Finally, the CPA maps are validated by comparison with {\it in situ} data and standard bio-optical products. Each step in this retrieval process is described in more detail below.
 
@@ -175,7 +174,7 @@ Finally, only the valid water pixels need to be used in the retrieval process. T
 % @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
 \section{Over-Water Atmospheric Correction} 
 \label{sec:atmcorr}
-The first objective in this research is to identify a suitable approach to atmospherically correct the type of dataset provided by the OLI sensor. This is a complex task to perform over water because the signal leaving the water that reaches the sensor is very small compared to the signal reaching the sensor from atmospheric scattering. 
+The first objective in this research is to identify a suitable approach to atmospherically correct the type of dataset provided by the OLI sensor. This is a complex task to perform over water because the signal leaving the water that reaches the sensor is very small compared to the signal reaching the sensor from atmospheric scattering. In ocean color, the end goal of the atmospheric correction is to convert from radiance units to the variable of interest for ocean color: \acrfull{rhow} or \acrfull{rrs}.
 
 Most of the atmospheric correction algorithms used for the heritage Ocean Color instruments (e.g. CZCS, MODIS and SeaWiFS) are based on the work done by \cite{Gordon:1994} (also described in \cite{Gordon:1997}). The NASA's standard algorithms for atmospheric correction based on \cite{Gordon:1994} have proved to work well in Case 1 waters where there are at least two wavelengths with a water-leaving signal negligible or known. Therefore, these algorithms could be considered a global solution for Case 1 waters, i.e. they could be applied in most cases. The wavelengths used for clear waters (Case 1) are in general in the near infrared (NIR) part of the spectrum. For highly turbid water (Case 2) or highly productive Case 1 waters, a combination of wavelengths in the NIR and shortwave infrared (SWIR), or two SWIR wavelengths can be used \cite{Wang:2007,Wang:2007dz,Wang2009}. Some efforts have been made to demonstrate the feasibility of using Landsat 8 for ocean color measurements in coastal waters that apply the Gordon and Wang approach for the atmospheric correction using the Landsat 8's NIR and SWIR 1 bands, or the SWIR 1 and SWIR 2 bands \cite{Vanhellemont2014a,Vanhellemont2014,Vanhellemont:2015,Franz:2015}. One problem with using the Gordon and Wang approach is that it requires a sufficient \gls{snr} over water in order to discriminate the water-leaving signal from the instrument noise. This could be particular important for OLI since it has a lower SNR than the heritage ocean color instruments have, and so derived ocean color products can be noisy.
 
@@ -717,7 +716,7 @@ The process is summarized as follows:
   \includegraphics[width=10cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/Proposal/Images/RuddickPlot.png}
   \caption{Scatterplot of Rayleigh-corrected reflectances at 765 and 865 nm for an subregion in a SeaWiFS image taken 28 October 1997, 12:15 UTC.  (Note: image taken from \cite{Ruddick:2000bs}). \label{fig:ruddickplot} } 
 \end{figure}
-% The second atmospheric correction method will be an extension of a method developed for SeaWiFS over turbid coastal and inland waters \cite{Ruddick:2000bs}. This method is a modified version of the methods developed by Gordon \cite{Gordon:1997} for ocean color satellites, but when the signal leaving the water does contribute to the overall signal beyond the NIR part of the spectrum. By using longer wavelengths and restricting the input pixels to open waters, these methods can be  applied to many fresh and coastal regions. The water surface reflectance values obtained after atmospheric correction will be validated through comparison to water surface reflectance measured in situ. 
+% The second atmospheric correction method will be an extension of a method developed for SeaWiFS over turbid coastal and inland waters \cite{Ruddick:2000bs}. This method is a modified version of the methods developed by Gordon \cite{Gordon:1997} for ocean color satellites, but when the signal leaving the water does contribute to the overall signal beyond the NIR part of the spectrum. By using longer wavelengths and restricting the input pixels to open waters, these methods can be  applied to many fresh and coastal regions. The water-leaving reflectance values obtained after atmospheric correction will be validated through comparison to water-leaving reflectance measured in situ. 
 
 % ------------------------------
 \subsection{SWIR bands Atmospheric Correction}
@@ -775,9 +774,7 @@ Enter the algorithm with glint corrected data:\\
 % @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
 \section{In-Water Constituent Retrieval Process}
 \label{sec:retrieval}
-The retrieval algorithm will be based on previous work done by \cite{Raqueno:2000}, \cite{Gerace:2013} and \cite{Concha2013IGARSS}. The water surface reflectance product obtained after atmospheric correction from the previous stage is used as input to the retrieval algorithm. Each pixel in the reflectance product has an unknown concentration. A spectral matching technique is applied to predict this concentration by comparing the spectral shape of each pixel with the elements in a look-up table (LUT). The complete retrieval process will be explained in the following sections. 
-
-Additionally, this study presents a comparison of chlorophyll-{\it a} concentrations ($C_a$) retrieved from the standard atmospheric correction algorithms and from the MoB-ELM algorithms. The NASA's standard bio-optical algorithms OC2, OC3, OC4\cite{OReilly2000} and OCI\cite{Hu:2012} for the retrieval of chlorophyll-{\it a} were developed mainly for Case 1 waters, where the main driver is chlorophyll-{\it a}. The {\it in situ} data used to develop these algorithms does not appear to contain enough data for high concentration of color producing agents (CPAs; chlorophyll-{\it a}, minerals (or total suspended matter or TSS), and colored dissolved organic matter (CDOM)), and therefore these data are not fully representative of Case 2 waters. Gerace {\it et al.} (2013)\cite{Gerace:2013} developed an algorithm for the simultaneous retrieval of color producing agents (CPAs) based on spectral matching and a look-up table (LUT) using simulated OLI data. Concha and Schott (2014)\cite{Concha2013IGARSS} extended Gerace's approach to actual OLI data. This approach does not depend on a global {\it in situ} dataset. Instead it builds a LUT specific to the inherent optical properties (IOPs) and observation conditions for the site.
+The retrieval algorithm will be based on previous work done by \cite{Raqueno:2000}, \cite{Gerace:2013} and \cite{Concha2013IGARSS}. The water-leaving reflectance product (or \acrshort{rrs} product) obtained after atmospheric correction from the previous stage is used as input to the retrieval algorithm (\autoref{fig:detailflowchart}). Each pixel in the \acrfull{rhow} product has an unknown concentration. A spectral matching technique is applied to predict this concentration by comparing the spectral shape of each pixel with the elements in a \gls{lut}. The complete retrieval process will be explained in the following sections. 
 % -------------------------------------
 \subsection{LUT generation}
 The LUT is generated in Ecolight~\cite{MobleyHE} for different triplets of water constituent concentrations (CPAs). Ecolight was used in the same fashion as in the black pixel determination for the MoB-ELM (\S\ref{subsubsec:blackpixel}). \autoref{tab:LUTconc2} shows the different parameters used to create the LUT in Ecolight. Two different sets of IOPs (mass-specific absorption and scattering spectra) were used, one set for modeling the open lake conditions (low concentration of CPAs) and one set for modeling the pond condition (high concentration of CPAs)\todo{show IOPs figures}. These IOPs are labeled in \autoref{tab:LUTconc2} as ``ONTNS'' for the open lake conditions and as ``LONGS'' for the pond conditions. \autoref{tab:LUTconc2} also shows the CPAs concentration used to create the LUT in Ecolight. Furthermore, discretized Fournier-Forand phase function with four different backscatter fraction values ($0.5$, $1.0$, $1.5$ and $2.0\%$) were used to account for the backscattering variability in the scene.
@@ -928,13 +925,15 @@ BRADONT&  43.325780 & -77.706432 &  ~~1.44 & ~2.00        & Braddock Bay, Lake O
   \caption{Landsat 8 image acquired on 09-19-2015 (scene LC80160302013262LGN00) showing the study area, the Rochester Embayment. The labels indicate the sites of the field collection at the same time as the satellite overpass (\autoref{tab:Sites}).\label{fig:RrsROIs130919} } 
 \end{figure}
 
-In order to have outputs in HydroLight that are representative of the water bodies that are being studied, inherent optical properties (IOPs) of those specific waters have to be defined as input to the HydroLight model. After collection, these water samples need to be analyzed in the lab to obtain IOPs for the main water constituents. Furthermore, apparent optical properties (AOPs) (i.e. water surface reflectance) and backscattering measurements will be also collected for further comparison and to pursue closure between the HydroLight AOPs results and in-situ AOPs measurements.
+In order to have outputs in HydroLight that are representative of the water bodies that are being studied, inherent optical properties (IOPs) of those specific waters have to be defined as input to the HydroLight model. After collection, these water samples need to be analyzed in the lab to obtain IOPs for the main water constituents. Furthermore, apparent optical properties (AOPs) (i.e. water-leaving reflectance) and backscattering measurements will be also collected for further comparison and to pursue closure between the HydroLight AOPs results and in-situ AOPs measurements.
 % -------------------------------------------------------------
 \subsection{Laboratory Measurements}
 
 
 % ----------------------------------------------------
 \subsection{Comparison}
+Additionally, this study presents a comparison of chlorophyll-{\it a} concentrations ($C_a$) retrieved from the standard atmospheric correction algorithms and from the MoB-ELM algorithms. The NASA's standard bio-optical algorithms OC2, OC3, OC4\cite{OReilly2000} and OCI\cite{Hu:2012} for the retrieval of chlorophyll-{\it a} were developed mainly for Case 1 waters, where the main driver is chlorophyll-{\it a}. The {\it in situ} data used to develop these algorithms does not appear to contain enough data for high concentration of color producing agents (CPAs; chlorophyll-{\it a}, minerals (or total suspended matter or TSS), and colored dissolved organic matter (CDOM)), and therefore these data are not fully representative of Case 2 waters. Gerace {\it et al.} (2013)\cite{Gerace:2013} developed an algorithm for the simultaneous retrieval of color producing agents (CPAs) based on spectral matching and a look-up table (LUT) using simulated OLI data. Concha and Schott (2014)\cite{Concha2013IGARSS} extended Gerace's approach to actual OLI data. This approach does not depend on a global {\it in situ} dataset. Instead it builds a LUT specific to the inherent optical properties (IOPs) and observation conditions for the site.
+
 The results from the retrieval process will be validated by comparison with the concentration of water samples taken during field campaigns in the spring and summer of 2013 and 2014\todo{2015?}. These concentrations will be obtained from lab measurements made at the Rochester Institute of Technology. %For further validation, the results will be compared with products derived from ocean color satellites such as MODIS (e.g. MODIS Chl-{\it a} product), in regions where it is possible.
 \todo{Comparison with MODIS?}
 Additionally, the results for the \gls{mobelm} and the CPA retrieval are compared with the products derived in the l2gen algorithm the in \gls{seadas} software described in \S\ref{sec:seadas}.
