--- a/Methodology.tex
+++ b/Methodology.tex
@@ -774,32 +774,35 @@ Enter the algorithm with glint corrected data:\\
 % @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
 \section{In-Water Constituent Retrieval Process}
 \label{sec:retrieval}
-The retrieval algorithm will be based on previous work done by \cite{Raqueno:2000}, \cite{Gerace:2013} and \cite{Concha2013IGARSS}. The water-leaving reflectance product (or \acrshort{rrs} product) obtained after atmospheric correction from the previous stage is used as input to the retrieval algorithm (\autoref{fig:detailflowchart}). Each pixel in the \acrfull{rhow} product has an unknown concentration. A spectral matching technique is applied to predict this concentration by comparing the spectral shape of each pixel with the elements in a \gls{lut}. The complete retrieval process will be explained in the following sections. 
+The retrieval algorithm will be based on previous work done by \cite{Raqueno:2000}, \cite{Gerace:2013} and \cite{Concha2013IGARSS}. The water-leaving reflectance product (or \acrshort{rrs} product) obtained after atmospheric correction from the previous stage is used as input to the retrieval algorithm (\autoref{fig:detailflowchart}). Each water pixel in the \acrfull{rhow} product has an unknown concentration. A spectral matching technique is applied to predict this concentration by comparing the spectral shape of each pixel with the elements in a \gls{lut}. The complete retrieval process will be explained in the following sections. 
 % -------------------------------------
 \subsection{LUT generation}
-The LUT is generated in Ecolight~\cite{MobleyHE} for different triplets of water constituent concentrations (CPAs). Ecolight was used in the same fashion as in the black pixel determination for the MoB-ELM (\S\ref{subsubsec:blackpixel}). \autoref{tab:LUTconc2} shows the different parameters used to create the LUT in Ecolight. Two different sets of IOPs (mass-specific absorption and scattering spectra) were used, one set for modeling the open lake conditions (low concentration of CPAs) and one set for modeling the pond condition (high concentration of CPAs)\todo{show IOPs figures}. These IOPs are labeled in \autoref{tab:LUTconc2} as ``ONTNS'' for the open lake conditions and as ``LONGS'' for the pond conditions. \autoref{tab:LUTconc2} also shows the CPAs concentration used to create the LUT in Ecolight. Furthermore, discretized Fournier-Forand phase function with four different backscatter fraction values ($0.5$, $1.0$, $1.5$ and $2.0\%$) were used to account for the backscattering variability in the scene.
+The \gls{lut} is generated in Ecolight \cite{MobleyHE} for different triplets of water constituent concentrations (CPAs). Ecolight was used in the same fashion as in the black pixel determination for the MoB-ELM algorithm (\S\ref{subsubsec:blackpixel}). As an example, \autoref{tab:LUTconc2} shows the different parameters used to create a LUT in Ecolight. Two different sets of {\it in situ} IOPs (mass-specific absorption and scattering coefficient spectra) were used, one set for modeling the open lake conditions (low concentration of CPAs) and one set for modeling the pond condition (high concentration of CPAs). These IOPs are labeled in \autoref{tab:LUTconc2} as ``ONTNS'' for the open lake conditions and as ``LONGS'' for the pond conditions. \autoref{tab:LUTconc2} also shows the CPAs concentration used to create the LUT in Ecolight, where $C_a$ is the chlorophyll-{\it a} concentration, \acrfull{tss}, $a_{CDOM}(440)$ is the CDOM absorption coefficient at the wavelength $\lambda=440nm$. Furthermore, discretized Fournier-Forand phase function with four different \acrfull{b_boverb} values ($0.5$, $1.0$, $1.5$ and $2.0\%$) were used to account for the backscattering variability in the scene.
 
 
 \begin{table}[htb]
 \caption{ Input parameters for the LUT generation in Ecolight. \label{tab:LUTconc2} } 
 \centering
-		\begin{tabular}{c|c|c|c|c}
-        		\bfseries{$<CHL>$}  	& \bfseries{$<SM>$}  & \bfseries{$a_{CDOM}(440)$} & \bfseries{$Backscatter$} & IOPs Input\\
-		$[ug/L]$  		& $[mg/L]$ & 	$[1/m]$ &	\bfseries{$Fraction$}, $[\%]$	\\ \hline \hline
-0.1   & 1.0  &  0.11 &  0.5 & ONTNS\\
-0.5   & 2.0  &  0.15 &  1.0 & LONGS\\
-1.0   & 5.0  &  0.21 &  1.5 & --\\
-3.0   & 10.0 &  0.6  &  2.0 & --\\
-10.0  & 25.0 &  1.0  &  --  & --\\
-20.0  & 45.0 &  1.2  &  --  & --\\
-40.0  & 50.0 &  --   &  --  & --\\
-60.0  & --   &  --   &  --  & --\\  
-90.0  & --   &  --   &  --  & --\\  
-110.0 & --   &  --   &  --  & --\\  
-135.0 & --   &  --   &  --  & --\\  
-150.0 & --   &  --   &  --  & --\\     
+		\begin{tabular}{ccccc}
+    \hline \hline
+    \multirow{2}{*}{IOPs Input} & \bfseries{$C_a$}  	& \bfseries{$TSS$}  & \bfseries{$a_{CDOM}(440)$} & \bfseries{$b_b/b$}\\
+		           & $[mg~m^{-3}]$   		& $[g~m^{-3}]$      & 	$[1/m]$                  &	$[\%]$	         \\ \hline \hline
+\multirow{7}{*}{ONTNS} & 0.1   & 1.0  &  0.11 &  0.5 \\
+                       & 0.5   & 2.0  &  0.15 &  1.0 \\
+                       & 1.0   & 5.0  &  0.21 &  1.4 \\
+                       & 3.0   & 10.0 &  0.6  &  2.0 \\
+                       & 10.0  & --   &  --   &  --  \\
+                       & 20.0  & --   &  --   &  --  \\
+                       & 40.0  & --   &  --   &  --  \\ \hline
+
+\multirow{5}{*}{LONGS} & 60.0  & 25.0 & 1.0   &  0.5 \\  
+                       & 90.0  & 45.0 & 1.2   &  1.0 \\  
+                       & 110.0 & 50.0 & --    &  1.4 \\  
+                       & 135.0 & --   & --    &  2.0 \\  
+                       & 150.0 & --   & --    &  --  \\  \hline \hline    
 	 	\end{tabular}
 	\end{table}
+
 
 After obtaining the LUT from Ecolight, the spectral curves in the LUT are spectrally sampled to the OLI's spectral response. An example of a LUT created in Ecolight is shown in \autoref{fig:LUT} with 2000 spectral curves. 
 
@@ -810,27 +813,10 @@ After obtaining the LUT from Ecolight, the spectral curves in the LUT are spectr
       \label{fig:LUT}
 \end{figure}
 
-% \begin{figure}[htb]
-%   	\centering
-%   	\includegraphics[height=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/Proposal/Images/CHLaastLONGSJavier.eps}
-%   \caption{Chlorophyll mass-specific absorption spectra used to create the LUT in HydroLight. \label{fig:CHLaastLONGS} } 
-% \end{figure}
 
-
-% \begin{figure}[htb]
-%   	\centering
-%   	\includegraphics[height=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/Proposal/Images/astar_CDOM_LONGS091913.eps}
-%   \caption{CDOM mass-specific absorption spectra used to create the LUT in HydroLight. \label{fig:CDOMaastLONGS} } 
-% \end{figure}
-
-% \begin{figure}[htb]
-%   	\centering
-%   	\includegraphics[height=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/Proposal/Images/astar_SM_LONGS091913.eps}
-%   \caption{SM mass-specific absorption spectra used to create the LUT in HydroLight. \label{fig:SMaastLONGS} } 
-% \end{figure}
 \subsection{Retrieval}
 \todo{add combination of both methods!}
-Two methods are investigated for performing the retrieval. The first one is using the root mean squared error (RMSE) to determine the concentrations based in the closest element in the LUT. This method gives discretized concentration values corresponding to the LUT concentration values. The second one uses a non-linear optimization to estimate these values. This method gives continuous concentration values based in a trilinear interpolation that interpolated between the closest matches in the LUT.
+Two methods were combined for performing the retrieval. The first one is using the root mean squared error (RMSE) to determine the concentrations based in the closest element in the LUT. This method gives discretized concentration values corresponding to the LUT concentration values. The second one uses a non-linear optimization to estimate these values. This method gives continuous concentration values based in a trilinear interpolation that interpolated between the closest matches in the LUT. Both method are described in the following section.
 % -----------------------------------------
 \subsubsection{Root Mean Square Error}
 In this work, the RMSE is defined as
